feat : create panels